--- a/src/components/forms/Forms.module.css
+++ b/src/components/forms/Forms.module.css
@@ -18,14 +18,14 @@
 }
 
 .submit {
-	background: #465671;
+	background: #0079BF;
 	color: #fff;
 	border: none;
 	border-radius: 8px;
 	padding: 8px 0;
 	width: 50px;
 	cursor: pointer;
-	align-self: flex-end;
+	align-self: flex-start;
 }
 
 .submit:hover {
