--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -4,13 +4,5 @@
 	display: flex;
 	align-items: center;
 	padding: 0 20px;
-}
-
-.logo {
-	width: 35px;
-	margin-right: 15px;
-}
-
-.sprint {
-	margin-left: auto;
+	justify-content: space-between;
 }
