--- a/src/components/options/Options.module.css
+++ b/src/components/options/Options.module.css
@@ -1,3 +1,37 @@
-.options-box {
-    
-}
+.selectWrapper {
+    position: relative;
+    width: 300px;
+    margin: 20px 0;
+    border: 1px solid #6C7231;
+    border-radius: 3px;
+    background-color: white;
+  }
+  
+  .selectWrapper:hover {
+    box-shadow: 0px 0px 3px gray;
+  }
+  
+  .selectWrapper select {
+    width: 300px;
+    height: 28px;
+    padding: 0 20px 0 7px;
+    background: transparent;
+    border: 0;
+    appearance: none;            /* remove arrow        */
+    -webkit-appearance: none;    /* remove arrow Chrome */
+    -moz-appearance: none;       /* remove arrow FF     */
+  }
+  .selectWrapper select::-ms-expand{
+      display: none;             /* remove arrow IE     */
+  }
+
+  .selectArrow {
+    position: absolute;
+    z-index: -9999;
+    right: 4px;
+    bottom: 5px;
+    border: 8px solid;
+    border-color: white white #6C7231 white;
+    border-right: 0;
+  }
+  
